Fix post font size too big on mobile

--- a/_sass/zscreensizing.scss
+++ b/_sass/zscreensizing.scss
@@ -35,9 +35,6 @@
     padding: 32px;
     min-width: 100%;
   }
-  .postContainer {
-    font-size: min(2em, 5.2vw);
-  }
   .postInfo {
     width: 100%;
   }
